Fix .body-wrapper sometimes being too large on Chrome

--- a/css/base.css
+++ b/css/base.css
@@ -198,10 +198,12 @@ body {
 body, button, input, kbd {
     font-size: inherit;
 }
+html, body, .body-wrapper {
+    height: 100%;
+}
 .body-wrapper {
     display: flex;
     flex-direction: column;
-    height: 100svh;
     min-width: 20rem;
     min-height: 40rem;
 }
